--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
     <main>
         <section class="section-img-logo">
             <div id="nome4">
-                <img src="img-3-heroku.png" height="70px" width="70px" alt="">
+                <img src="img-3-heroku.png" height="90px" width="90px" alt="">
             </div>
         </section>
-        <div class="row" id="nome7">
-            <section class="section-form">
+
+        
+            <section class="section-form ">
                 <div class="container-title-form-top">
                     <h2 class="title-form-top">Log in to your account</h2>
                 </div>
@@ -77,7 +78,7 @@
                     </div>
                     <div class="container-button-login">
                         <div class="d-grid gap-2 col-12 mx-auto container-button-login">
-                            <button class="btn btn-primary button-login" type="button">Log in</button>
+                            <button class="btn btn-primary btn-lg button-login" type="button">Log in</button>
 
                         </div>
                     </div>
@@ -89,7 +90,9 @@
                             Up</span></a>
                 </div>
             </section>
-        </div>
+       
+
+
         <div class="container-forgot-password">
             <a href="#" class="forgot-password"><span>Login via SSO</span> <span id="nome6">Forgot your
                     password?</span></a>
