Finaliza versão 01 do projeto

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="pt-br">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -14,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 
-    <title>Teste Login</title>
+    <title>Portfólio layout Heroku</title>
 </head>
 
 <body>
@@ -46,7 +45,7 @@
     <main>
         <section class="section-img-logo">
             <div id="imagem-heroku">
-                <img src="img-3-heroku.png" height="90px" width="90px" alt="">
+                <img src="./images/img-3-heroku.png" height="90px" width="90px" alt="">
             </div>
         </section>
         <section class="section-form ">
@@ -106,30 +105,30 @@
             </span>
             <span class="span-company">Company</span>
         </a>
-        <ulstyle="height: 30%; justify-content: center; padding: 0; margin: 0; width: 100%;">
-            <ul>
-                <div class="row row-footer">
-                    <li class="nav-item col-auto">
-                        <a class="nav-link active nav-text-white" aria-current="page" href="#">Terms of Service</a>
-                    </li>
-                    <li class="col-auto">
-                        <a class="nav-link nav-text-white" href="#">Privacy</a>
 
-                    </li>
+        <ul>
+            <div class="row row-footer">
+                <li class="nav-item col-auto">
+                    <a class="nav-link active nav-text-white" aria-current="page" href="#">Terms of Service</a>
+                </li>
+                <li class="col-auto">
+                    <a class="nav-link nav-text-white" href="#">Privacy</a>
 
-                    <li class="nav-item col-auto">
-                        <a class="nav-link nav-text-white" href="#">Cookies</a>
-                    </li>
-                    <li class="nav-item col-auto">
-                        <a class="nav-link nav-text-white" href="#">Cookie Preferences</a>
-                    </li>
-                </div>
-                <div class="row row-salesforce">
-                    <li class="nav-item col-auto">
-                        <a class="nav-link nav-text-white" href="#">2021 Salesforce.com</a>
-                    </li>
-                </div>
-            </ul>
+                </li>
+
+                <li class="nav-item col-auto">
+                    <a class="nav-link nav-text-white" href="#">Cookies</a>
+                </li>
+                <li class="nav-item col-auto">
+                    <a class="nav-link nav-text-white" href="#">Cookie Preferences</a>
+                </li>
+            </div>
+            <div class="row row-salesforce">
+                <li class="nav-item col-auto">
+                    <a class="nav-link nav-text-white" href="#">2021 Salesforce.com</a>
+                </li>
+            </div>
+        </ul>
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper    -->
